# img-processing-cuda

./: .gitignore
src/cpu/: edge_detect.cpp  main.cpp
src/gpu/: CMakeLists.txt  kernelcall.cu  main.cu
src/utils/: Makefile  cjpeg.c  cuda_image.cpp  cuda_image.cu  cuda_image.cuh  djpeg.c  img2gray.cu  test-encode.c  test-jpeg.c  turbo_jpeg.h
