cmake_minimum_required(VERSION 2.8)
project(gpu_img_proc)
find_package(CUDA REQUIRED)
find_package(OpenCV REQUIRED)
include_directories(${OpenCV_INCLUDE_DIRS} -D WITH_CUDA=ON)
set(CUDA_NVCC_FLAGS ${CUDA_NVCC_FLAGS}; "-gencode arch=compute_62,code=sm_62; -ccbin /usr/bin/gcc ; -std=c++11; -O2; -DVERBOSE;")
cuda_add_executable(main main.cu kernel.cu kernelcall.cu)
target_link_libraries(main ${OpenCV_LIBS})
